--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
 
     </div>
 
+
+    <div class="row detailBlock" id="detailBlock"style="display:none">
+      <div class="col-md-10 text-center">
+        <div class="row" id="detailDiv">
+          <div class="col-md-4 text-center"> Author : <input type="text" placeholder="Author" id="author"></div>
+          <div class="col-md-8 text-center">Title : <input type="text" id="title" class="titleInput" placeholder="Please enter the title here ... "></div>
+        </div>
+        <div class="col-md-12 text-center" id="snapshotDiv">Snapshot : <textarea id="snapshot"type="text" rows="4" cols="50" placeholder="Some Details ... "></textarea></div>
+      </div>
+      <div class="col-md-2 text-center">
+        <button type="button" id="saveNewPostDetail" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+
+
+
   </div>
 
   <div class="row">
